--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/parkingcontroll_postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
